# cyo_api

./: .env  .gitignore  README.md  Zipcode_deduplicated.csv  app.db  code.ipynb  main.py  pyproject.toml  requirements.txt
app/: config.py  database.py
app/auth/: jwt.py  utils.py
app/dependencies/: auth.py
app/models/: Zipcode.csv  __init__.py  event.py  event_participant.py  memory.py  otp.py  pincode.py  pincode_with_lat-long.csv  token.py  user.py
app/routers/: __init__.py  admin.py  auth.py  events.py  memories.py  users.py
app/schemas/: auth.py  event.py  memory.py  otp.py  token.py  user.py
app/utils/: distance.py  email.py  pincode_initializer.py
scripts/: create_dummy_events.py  seed_data.py
